# Attendance

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CreatePassword.py  CustomLogicReadme.MD  ESP32_TIMECLOCK_API.md  SQLTables.txt  _ide_helper.php  artisan  composer.json  hericonScript.sh  migrate_heroicons.sh  package-lock.json  package.json  phpunit.xml  tailwind.config.js
app/Contracts/: EmailTemplateDefinition.php
app/Exports/: DataExport.php
app/Helpers/: CompanySetupHelper.php  KoolReportLaravelCompatibility.php
app/Imports/: DataImport.php
app/Jobs/: CheckDeviceOfflineStatus.php  PostPayPeriodJob.php  ProcessClockEventJob.php  ProcessClockEventsJob.php  ProcessDataImportJob.php  ProcessPayPeriodJob.php  ProcessPayrollExportJob.php  RecalculateEmployeeSummaryJob.php
app/Livewire/: CreateTimeRecordModal.php  UpdateTimeRecordModal.php
app/Mail/: DeviceBackOnlineAlert.php  DeviceOfflineAlert.php  TemplatedMail.php
app/Models/: Announcement.php  AnnouncementRead.php  Attendance.php  AttendanceTimeGroup.php  Card.php  Classification.php  ClockEvent.php  CompanySetup.php  Credential.php  DataImportRecord.php  Department.php  Device.php  EmailTemplate.php  Employee.php  EmployeeStat.php  EmployeeVacationAssignment.php  Holiday.php  HolidayInstance.php  HolidayTemplate.php  IntegrationConnection.php  IntegrationFieldMapping.php  IntegrationObject.php  IntegrationQueryTemplate.php  IntegrationSyncLog.php  OvertimeCalculationLog.php  OvertimeRule.php  PayPeriod.php  PayPeriodEmployeeSummary.php  PayrollExport.php  PayrollFrequency.php  Punch.php  PunchType.php  ReportItem.php  RoundGroup.php  RoundingRule.php  Schedule.php  Shift.php  ShiftSchedule.php  SystemLog.php  SystemTask.php  (+6 more)
app/Notifications/: AnnouncementDismissedNotification.php  AnnouncementNotification.php  SystemAlertNotification.php
app/Observers/: AttendanceObserver.php
app/Policies/: ClassificationPolicy.php  ClockEventPolicy.php  CompanySetupPolicy.php  CredentialPolicy.php  EmployeeStatPolicy.php  OvertimeRulePolicy.php  PayPeriodPolicy.php  PayrollFrequencyPolicy.php  PunchPolicy.php  PunchTypePolicy.php  RoundGroupPolicy.php  RoundingRulePolicy.php  ShiftSchedulePolicy.php  VacationCalendarPolicy.php
app/Providers/: AppServiceProvider.php  DebugToolsServiceProvider.php  DynamicMailConfigServiceProvider.php  TelescopeServiceProvider.php
app/Reports/: ADPExportReport.php
app/Services/: AlertService.php  AnnouncementService.php  ConfigurableVacationAccrualService.php  EmailTemplateService.php  ErrorReferenceService.php  ExcelErrorImportService.php  ModelDiscoveryService.php  PunchStateService.php  RoundingRuleService.php  VacationAccrualService.php  VacationRequestService.php
app/Traits/: HandlesAnnouncementActions.php  HasEmployeeDataFiltering.php  TracksSystemTask.php
bootstrap/: app.php  providers.php
config/: debugbar.php  filament-shield.php  filament.php  filesystems.php  livewire.php  logging.php  telescope.php
database/: DataBackup.sql  timeattendance_Feb11.2026.sql
database/factories/: AnnouncementFactory.php  CredentialFactory.php  DepartmentFactory.php  DeviceFactory.php  EmailTemplateFactory.php  EmployeeFactory.php  UserFactory.php  VacationRequestFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2024_11_22_015243_create_attendance_table.php  2024_11_22_015243_create_cards_table.php  2024_11_22_015243_create_devices_table.php  2024_11_22_015243_create_holidays_table.php  2024_11_22_015243_create_pay_period_table.php  2024_11_22_015243_create_schedules_table.php  (+115 more)
docs/: ARCHITECTURE.md  Apple Wallet Reader.md  DATA_MODEL.md  Example.md  FIRMWARE_MERGE_STRATEGY.md  INTEGRATIONS.md  PAYROLL_EXPORT_ARCHITECTURE.md  PAYROLL_EXPORT_STATUS.md  PINOUT_REFERENCE.md  SQUARELINE_UI_MERGE_CHECKLIST.md  Time_and_Attendance_Solutions_Overview.md
public/: index.php
routes/: api.php  console.php  web.php
storage/app/firmware/Main_Attendance_Time_Clock/main/: CMakeLists.txt  api_client.c  camera_interface.c  camera_interface.h  ethernet_manager.c  ethernet_manager.h  firmware_info.h  idf_component.yml  main.c  main_minimal.c  mfrc522.c  mfrc522.h  network_manager.c  nfc_reader.c  nfc_reader.h  pn532.c  pn532_driver_hsu.h  pn532_driver_i2c.c  pn532_driver_i2c.h  pn532_driver_spi.h  punch_queue.c  punch_queue.h  ryrr30d.c  ryrr30d.h  time_settings.c  time_settings.h  ui_manager.c  ui_manager.h  wifi_manager.h
storage/app/templates/esp32_p4_lvgl_test/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_screen_adminlogin.h  ui_screen_deviceinformation.h  ui_screen_mainscreen.c  ui_screen_mainscreen.h  ui_screen_networksetup.h  ui_screen_setupconfigurations.c  ui_screen_setupconfigurations.h  ui_screen_timeinformation.c  ui_screen_wifisetup.c  ui_screen_wifisetup.h  ui_screen_wiredsetup.c
storage/app/templates/esp32_p4_lvgl_test/ui/components/: ui_comp_hook.c
storage/app/templates/esp32_p4_lvgl_test/ui/fonts/: ui_font_Icons.c
storage/app/templates/esp32_p4_lvgl_test/ui/screens/: ui_screen_mainscreen.c  ui_screen_mainscreen.h
storage/app/templates/esp32_p4_nfc_espidf/main/: CMakeLists.txt  api_client.c  api_client.h  ethernet_manager.c  features.h  firmware_info.h  main.c  network_manager.c  network_manager.h  pn532.h  pn532_driver.c  pn532_driver.h  pn532_driver_hsu.c  pn532_driver_spi.c  punch_queue.c  time_settings.c  time_settings.h  ui_bridge.c  ui_bridge.h  ui_manager.c  ui_manager.h  wifi_manager.c
storage/app/templates/esp32_p4_nfc_espidf/ui/: CMakeLists.txt  filelist.txt  ui.c  ui_comp.h  ui_events.c  ui_events.h  ui_helpers.h  ui_img_baseline_wifi_black_36dp_png.c  ui_screen_adminlogin.c  ui_screen_adminlogin.h  ui_screen_deviceinformation.c  ui_screen_deviceinformation.h  ui_screen_mainscreen.c  ui_screen_mainscreen.h  ui_screen_setupconfigurations.c  ui_screen_setupconfigurations.h  ui_screen_timeinformation.c  ui_screen_timeinformation.h  ui_screen_wiredsetup.h
storage/app/templates/p4_wifi_display/main/: CMakeLists.txt  app_main.c
tests/: Pest.php
(+747 files in other folders)
